fixed some layout issues

--- a/src/main/webapp/externals/yasgui.css
+++ b/src/main/webapp/externals/yasgui.css
@@ -1,17 +1,44 @@
 span.CodeMirror-matchhighlight {
 	background: #e9e9e9
 }
+
 .CodeMirror-focused span.CodeMirror-matchhighlight {
-	background: #e7e4ff;!important
+	background: #e7e4ff !important;
 }
+
 .CodeMirror-gutter {
-	width: 37px;	
+	width: 37px;
 }
-.cm-s-default span.cm-error { border-bottom:2px dotted red;}
+
+.CodeMirror {
+	border-width: 1px;
+}
+
+.cm-s-default span.cm-error {
+	border-bottom: 2px dotted red;
+}
+
 .clickable {
-  color: blue;
-  cursor: pointer;
+	color: blue;
+	cursor: pointer;
 }
+
 .tabSetContainer {
 	border: 0px solid black !important;
+}
+
+
+.footer {
+	margin-top: 3px;
+	border-top-style: solid;
+	border-top-color: #D9D9D9;
+	border-top-width: 3px;
+	color: #D9D9D9;
+}
+.footerlink {
+	font-weight: bold;
+	position: static;
+	cursor: pointer;
+	color: #686772;
+	margin: 3px;
 }
